# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
# Distributed under the GPL v2

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel,
  genkernel.8:
  Added a couple more places where I needed to switch INITRD with RAMDISK.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
  arch/alpha/modules_load, arch/ia64/modules_load, arch/mips/modules_load,
  arch/parisc/modules_load, arch/parisc64/modules_load,
  arch/ppc/modules_load, arch/ppc64/modules_load, arch/sparc/modules_load,
  arch/sparc64/modules_load, arch/x86/modules_load,
  arch/x86_64/modules_load, defaults/initrd.scripts, defaults/linuxrc,
  defaults/modules_load, gen_bootloader.sh, gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, -gen_initrd.sh, gen_moddeps.sh,
  gen_package.sh, genkernel, genkernel.8:
  Removed all references to an initrd and renamed most initr{d,amfs} stuff
  to simply 'ramdisk' to simplify things for the future.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
  +defaults/initrd.defaults, +defaults/initrd.scripts,
  +defaults/keymaps.tar.gz, +defaults/linuxrc, +defaults/modprobe,
  +defaults/udhcpc.scripts, gen_initramfs.sh, -generic/initrd.defaults,
  -generic/initrd.scripts, -generic/keymaps.tar.gz, -generic/linuxrc,
  -generic/modprobe, -generic/udhcpc.scripts:
  Moving files from generic to defaults, since they are the defaults used
  globally.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO, +modules/README:
  Added the modules directory, which will be used to store the built-in
  modules and also for external entities to add their own modules and hooks.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> +defaults/busy-config,
  +defaults/config.sh, +defaults/kernel-config, +defaults/modules_load,
  +defaults/nb-busybox.cf:
  Added a defaults directory to store default files for builds. These are
  overridden by architecture or module specific parameters. This should end