@@ -287,31 +287,13 @@ clean_dietlibc_bincache() {
 	cd - > /dev/null
 }
 
-compile_dep() {
-	# Only run ``make dep'' for 2.4 kernels
-	if [ "${VER}" -eq '2' -a "${KERN_24}" -eq '1' ]
-	then
-		print_info 1 "kernel: >> Making dependencies..."
-		cd ${KERNEL_DIR}
-		compile_generic dep kernel
-	fi
-}
-
 compile_modules() {
 	print_info 1 "        >> Compiling ${KV} modules..."
 	cd ${KERNEL_DIR}
 	compile_generic modules kernel
 	export UNAME_MACHINE="${ARCH}"
-	# On 2.4 kernels, if MAKEOPTS > -j1 it can cause failures
-	if [ "${VER}" -eq '2' -a "${KERN_24}" -eq '1' ]
-	then
-		MAKEOPTS_SAVE="${MAKEOPTS}"
-		MAKEOPTS="${MAKEOPTS_SAVE/-j?/-j1}"
-	fi
 	[ "${INSTALL_MOD_PATH}" != '' ] && export INSTALL_MOD_PATH
 	compile_generic "modules_install" kernel
-	[ "${VER}" -eq '2' -a "${KERN_24}" -eq '1' ] && MAKEOPTS="${MAKEOPTS_SAVE}"
-	export MAKEOPTS
 	unset UNAME_MACHINE
 }
 
